<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elsalvador.applife.MainActivity"
    android:layout_margin="8dp">


    <TableRow android:layout_weight="1">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00796B"
            android:orientation="vertical"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="#FFF" />


        </LinearLayout>




        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2E7D32"
            android:orientation="vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/perfil" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="#FFF" />

        </LinearLayout>


    </TableRow>


    <TableRow android:layout_weight="1">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002884"
            android:orientation="vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/favoritos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fav"
                android:textColor="#FFF" />


        </LinearLayout>




        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#7C42BB"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@mipmap/ingresos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/income"
                android:textColor="#FFF" />

        </LinearLayout>



    </TableRow>


    <TableRow android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E57373"
            android:orientation="vertical"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/pres" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/t"
                android:textColor="#FFF" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#AB1357"
            android:orientation="vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:src="@mipmap/tarjeta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="#FFF" />

        </LinearLayout>


    </TableRow>



</TableLayout>
